// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpanderButton expanded /> should render correctly 1`] = `
.c0 {
  outline: none;
  border: none;
  display: block;
  width: 40px;
  height: 40px;
  background-color: transparent;
  color: rgba(0,0,0,.54);
}

.c0:disabled {
  color: rgba(0,0,0,.12);
}

.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
  data-testid="expander-button"
>
  <svg
    fill="currentColor"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
    />
    <path
      d="M0-.75h24v24H0z"
      fill="none"
    />
  </svg>
</button>
`;

exports[`<ExpanderButton expanded={false} /> should render correctly 1`] = `
.c0 {
  outline: none;
  border: none;
  display: block;
  width: 40px;
  height: 40px;
  background-color: transparent;
  color: rgba(0,0,0,.54);
}

.c0:disabled {
  color: rgba(0,0,0,.12);
}

.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
  data-testid="expander-button"
>
  <svg
    fill="currentColor"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
    />
    <path
      d="M0-.25h24v24H0z"
      fill="none"
    />
  </svg>
</button>
`;
